--- a/src/frontend/apps/e2e/package.json
+++ b/src/frontend/apps/e2e/package.json
@@ -10,10 +10,10 @@
   },
   "devDependencies": {
     "@playwright/test": "1.44.1",
-    "@types/node": "*",
+    "@types/node": "20.14.2",
     "@types/pdf-parse": "1.1.4",
     "eslint-config": "*",
-    "typescript": "*"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "convert-stream": "1.0.2",
