--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,36 +13,6 @@ services:
     ports:
         - "16379:6379"
 
-  mailcatcher:
-    image: sj26/mailcatcher:latest
-    ports:
-      - "1081:1080"
-
-  minio:
-    user: ${DOCKER_USER:-1000}
-    image: minio/minio
-    environment:
-      - MINIO_ROOT_USER=dinum
-      - MINIO_ROOT_PASSWORD=password
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    entrypoint: ""
-    command: minio server --console-address :9001 /data
-    volumes:
-      - ./data/media:/data
-
-  createbuckets:
-    image: minio/mc
-    depends_on:
-      - minio
-    entrypoint: >
-      sh -c "
-      /usr/bin/mc alias set impress http://minio:9000 impress password && \
-      /usr/bin/mc mb impress/impress-media-storage && \
-      /usr/bin/mc version enable impress/impress-media-storage && \
-      exit 0;"
-
   app-dev:
     build:
       context: .
@@ -50,7 +20,7 @@ services:
       args:
         DOCKER_USER: ${DOCKER_USER:-1000}
     user: ${DOCKER_USER:-1000}
-    image: impress:backend-development
+    image: widged:backend-development
     environment:
       - PYLINTHOME=/app/.pylint.d
       - DJANGO_CONFIGURATION=Development
@@ -64,46 +34,8 @@ services:
       - ./data/static:/data/static
     depends_on:
         - postgresql
-        - mailcatcher
         - redis
-        - createbuckets
         - nginx
-  
-  celery-dev:
-    user: ${DOCKER_USER:-1000}
-    image: impress:backend-development
-    command: ["celery", "-A", "main.celery_app", "worker", "-l", "INFO"]
-    environment:
-      - DJANGO_CONFIGURATION=Development
-    env_file:
-      - env.d/development/common
-      - env.d/development/postgresql
-    volumes:
-      - ./src/backend:/app
-      - ./data/static:/data/static
-    depends_on:
-      - app-dev
-
-  celery-flower:
-    build:
-      context: .
-      target: celery-flower
-      args:
-        DOCKER_USER: ${DOCKER_USER:-1000}
-    user: ${DOCKER_USER:-1000}
-    image: celery-flower
-    ports:
-      - "5555:5555"
-    environment:
-      - DJANGO_CONFIGURATION=Development
-    env_file:
-      - env.d/development/common
-      - env.d/development/postgresql
-    volumes:
-      - ./src/backend:/app
-      - ./data/static:/data/static
-    depends_on:
-      - app-dev
 
   app:
     build:
@@ -112,7 +44,7 @@ services:
       args:
         DOCKER_USER: ${DOCKER_USER:-1000}
     user: ${DOCKER_USER:-1000}
-    image: impress:backend-production
+    image: widged:backend-production
     environment:
       - DJANGO_CONFIGURATION=Demo
     env_file:
@@ -121,28 +53,6 @@ services:
     depends_on:
       - postgresql
       - redis
-      - minio
-
-  celery:
-    user: ${DOCKER_USER:-1000}
-    image: impress:backend-production
-    command: ["celery", "-A", "impress.celery_app", "worker", "-l", "INFO"]
-    environment:
-      - DJANGO_CONFIGURATION=Demo
-    env_file:
-      - env.d/development/common
-      - env.d/development/postgresql
-    depends_on:
-      - app
-
-  nginx:
-    image: nginx:1.25
-    ports:
-      - "8083:8083"
-    volumes:
-      - ./docker/files/etc/nginx/conf.d:/etc/nginx/conf.d:ro
-    depends_on:
-      - keycloak
 
   dockerize:
     image: jwilder/dockerize
@@ -166,41 +76,3 @@ services:
     volumes:
       - ./src/frontend/apps/main:/home/frontend/apps/main
       - /home/frontend/node_modules/
-    depends_on:
-      - celery-dev
-
-  kc_postgresql:
-    image: postgres:14.3
-    platform: linux/amd64
-    ports:
-      - "5433:5432"
-    env_file:
-      - env.d/development/kc_postgresql
-
-  keycloak:
-    image: quay.io/keycloak/keycloak:20.0.1
-    volumes:
-      - ./docker/auth/realm.json:/opt/keycloak/data/import/realm.json
-    command:
-      - start-dev
-      - --features=preview
-      - --import-realm
-      - --proxy=edge
-      - --hostname-url=http://localhost:8083
-      - --hostname-admin-url=http://localhost:8083/
-      - --hostname-strict=false
-      - --hostname-strict-https=false
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-      KC_DB: postgres
-      KC_DB_URL_HOST: kc_postgresql
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_PASSWORD: pass
-      KC_DB_USERNAME: impress
-      KC_DB_SCHEMA: public
-      PROXY_ADDRESS_FORWARDING: 'true'
-    ports:
-      - "8080:8080"
-    depends_on:
-      - kc_postgresql
