--- a/src/helm/env.d/dev/secrets.enc.yaml
+++ b/src/helm/env.d/dev/secrets.enc.yaml
@@ -1,7 +1,7 @@
-djangoSecretKey: ENC[AES256_GCM,data:2b4nHO2i/HtaNJYi1d8xJyhCpK1qV7fHD45T6VarWpNg1HkcJgC7zTgHMEvfedRd2tE=,iv:qcHlXG/mNr3CFtZhjbw3AVRbMxkGZaAZPtHtS8ksO58=,tag:mTC6mc5JKqpEQ/9ubggKmA==,type:str]
+djangoSecretKey: ENC[AES256_GCM,data:OMxKNoY688FBTTyMjUOPHriM1GXJjcsviwNfujpkATAAqMQu/S87ln1V/gGEqQajLRQleg==,iv:8c04e1FvJQ0tz0oAn3rLmWFXku710IdV2/GxDM15vbk=,tag:CIrxsQlphGI4e+78JVdfxg==,type:str]
 oidc:
-    clientId: ENC[AES256_GCM,data:gcwhXfL4iNwWWleR/l3p2aRSp9nsdLhQtUMlglLqJSdDy6iu,iv:WxK7BBQrVa115dsHEiMC7NyvlQXuhLiZzHYSuhZYy4w=,tag:RYwutm8QB+mIl7b+AYvqxg==,type:str]
-    clientSecret: ENC[AES256_GCM,data:9rU6HWRiX+6afLf4fGyIRyiv/pyihbCbO9DA2L4HOz/RAMaO9iZWW1QqIK8JCBuGh/XP1I3sd0mlbiXxCv1X3w==,iv:0NgcQtCVjIWhfzQbBx2Hh7NxumF3xW8nNuReUkvdk58=,tag:rkMAJ8Ilk8Pusw3PAyW/6A==,type:str]
+    clientId: ENC[AES256_GCM,data:mSy+,iv:v+oPZFEgtEkHF/U/MD0CCCXn1FVRFS+DEmCSiKq86RU=,tag:T2zMmUGphW2cnCqy8/kouA==,type:str]
+    clientSecret: ENC[AES256_GCM,data:VRxl,iv:DgBRVVgKqQUWlq3Gbvc5EkBcLChfHWShogQR/HJwwL0=,tag:kBN77gM0dC+ylNSRZzsCKA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -11,50 +11,50 @@ sops:
         - recipient: age15fyxdwmg5mvldtqqus87xspuws2u0cpvwheehrtvkexj4tnsqqysw6re2x
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiem9OZTZYQnV5UVpzaHN0
-            MlpGL2xaMTVldkVPY2Jub3IxU2FhcVBNYWxvCk1qbHJFa2ZVdmp4Yy9COGFPNzlL
-            amh5S21qbm1jTlgxZjBZMk5BTllNZlUKLS0tIGM5aTJrbnRSdXZPWVF3RVR2dlRD
-            NThRV1hpb0k5RElvRlYySTZyMXp3dGsK92FrBnrHAIRcGooyJviJSUA+eHiwvVkm
-            b1T9jk9bmoipV/8WkXbGyk0TZKYuB4pvPE88eNLrYeotTiRu9tJUNw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvZmRxL2tIQ3pCaGFZSTJi
+            eEU3T216Q1YrN1I3V00xQUlzeUtYNHJMMndnCjhFSzY5UEpkQ3U3Z1I3T09NUGhr
+            MWFIK0RENEVjaWtPcno0Vnk1SitJR3MKLS0tIDZqNkhVV2N3UnNaT0N4amFoa0N6
+            aFp5N2EweENScGduL2ZLYjd6eFBnbXMKeN/COeB0oOhwSbb/yvmQ2j+g5Pg7JVXO
+            8MvGMmcXjm8bvLb//RxGtqNvglXSb4rGIorBrCHU0Hl6HkAc33ZGqQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age16hnlml8yv4ynwy0seer57g8qww075crd0g7nsundz3pj4wk7m3vqftszg7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxQUhLb2Z4N3ptTjBHZ3N3
-            cVBNMDJFS09wck9LcytJR1h4WCtlblZpYkJnCmdBN1laOGdiN1lKbUFBOTdLTUM1
-            NHFLZm51M0dLakIxcG1ncnFrb3dCeXMKLS0tIDdWUmlkYy9PSWhoYkRPNXc4aDNa
-            TWxUMUlqUHhNL3NZL0R2WE9ySU5wcTAKMzwEzXiGSGr4BJNZ78mo68V1Jq4ydOWl
-            dlSkEe+zv2jYYmLxirBDbLN+dwUwyAA8/eYYidvuMvHw1sfT14GyRw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMzZLUi9WOU9IamZMemxu
+            alpnME5vbDMrZEo4WDZTOWFpdFZQMDFnTzBNCklhekdSWDlTWHliclJ5OHFzTTI1
+            MUhoWmw0dGFCbWk5dXhickdtZVpGeXcKLS0tIFM0VXBLK2xBcDZJSmVDUjRoNzFL
+            ajAwUUxNR2NrTkdvU0tnbDZ0K3hyNUkKjZljCCS8uTAX/ZmAjfSvfnSnUOYq/k8j
+            hWdGHiL/JmqqC8ho5dnyLfQNntIf3w16xaJTkhi9sYCB4/mKyDVtlw==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1plkp8td6zzfcavjusmsfrlk54t9vn8jjxm8zaz7cmnr7kzl2nfnsd54hwg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiZFRjVmtiVXpONk4xZktB
-            TXo5OE1Jam1qREdPTjJSanUvd3R3dWI5SDA0CjZqZDNxZklNZXhvOExSaGlzOW85
-            OFYxMzhYMTFDUStpYTdLdEFEdUU3ZW8KLS0tIDVkYmVQMTcvbFhFa0xPb2h6TlFW
-            TmJUY2hncjg4TkhxOWRxazh5cXQyWHcKgDbgGfl1WQiT6tIG/pmikYUYIF0l4kj7
-            ZxlgL+Vn9y3fl5B2LGn/fXfi9B/exgLMCR/GRm3vF4OpPqLYbL0rzw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMnc3TS9HLzZndGVOcWlQ
+            eXFBai93bWIzSUpmc0wrYWVJeTRhNENmSm5BCjVxdUdyWXFuekRBWWdzWG4vYjFE
+            QXF6SndVMGZOajFsemUwUGFIbjN6WUEKLS0tIGpwNWpWNlJTaWc0SC91aUpIaTRv
+            OHo2RmM1MUYwZjcxYjlsRFBkcVUwRVEKDOYZ4J9YkhxvNSLNyBx4lOTfzC79oyB5
+            7w4CbVEXboV/dIYzrv2r/lLhvnZPcEU4DMq9IL9fpmdPk7JkX5hWuA==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age12g6f5fse25tgrwweleh4jls3qs52hey2edh759smulwmk5lnzadslu2cp3
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWanllM2FDOStFNWVhR1A3
-            MVJMRDFCTHY3ZlF3MHg3MGxOWGRtSko0MVd3CmFheUllSkN4VTF5WmZubU1BeWtp
-            em1tL3dwWGszYmVYSUlwVVZDR3BIK0UKLS0tIDQrWEtuZGVSM3JwM0xYc2N2alpG
-            eEtzN3Y3UVZkQVlBd0dUWmdVdStSUmcKNQZ0uj0Sj3e7Q9PKsZi4CcS5LEWlD9tL
-            nOaoMiN1AA307uvePKgFAuChQ5VsAGMcegLJ5M8w516/+yO42yexUw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkV0lhdHVXbjgxQ2o0NUY3
+            OTVyNmd0RGhoODN2OWR5SEREN0svaXNFQzNvCm44dlh6NkxFcjZOcW16V2pXa2xL
+            VEhxOW5za3BGdGNyOXNFRk1QKzd2UjAKLS0tIEFVb2U5ZTJXbEpma3A1RFJrUmdz
+            a2JKbFVjNEpIYmF5NGFiVXNoMXlrUUUKFWbIWlp7J5ODR0uLRHxjzmifY/CoiBpn
+            LtjOIhE8t+r2diWkhYFZ30upWFoqiqTFGEgic3QJnHwRR2PrwDAQQw==
             -----END AGE ENCRYPTED FILE-----
-        - recipient: age1qy04neuzwpasmvljqrcvhwnf0kz5cpyteze38c8avp0czewskasszv9pyw
+        - recipient: age1hnhuzj96ktkhpyygvmz0x9h8mfvssz7ss6emmukags644mdhf4msajk93r
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxa0F4VW5oRGFYSVpPOTVW
-            QjEvL2czQkRwK0tWOStxYkJRaUlHUjlSWWswClE4TW9tLy9oQXZQSVc3R3cwTGU1
-            ZGh4UTUzR0FKY0NmMFFaaTFKakVNNlkKLS0tIFRvZ0V5emV6cjBqNlZxOEpwVy8y
-            N0ZkVmNzTzhhRTA5TDMxc2tGN3BFemMKlyPtb7gfYREoPaU3ZlpynCuqxo4KW0b9
-            G+3aGz7SKZ7pcuAaWuuMdyA6XzwS/HOe2L2cW3P5x/0k0JQd2Ie8jA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2MjBHUDljTDI1eDNnM2pl
+            OWxPNzhJN1BOQk5QRXc2ejBSMzN6VDU4THcwCnUzbWoweGNUK2FnNlo1VzBuV1Ar
+            cUpRY3hVMDhUVS9haWd5Rkl0UDg3clEKLS0tIGc3REptWm83MG96OU5CZVZGUXlJ
+            VUF5d0QxcmR6QUZjNno0bnhJVUZZOWsKyNdiTXwNCe0gt0wAMTX0fqe/htbM8Jay
+            +ThSxLb77O9vzEO98czRfRBLB0aFDXu1kFHHJ8H9TGyw8TN3RIHaQA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-11T14:59:54Z"
-    mac: ENC[AES256_GCM,data:Pv37FsNCpk5Ckx3a+j+daPB6f34X5kIko/AZIQkgfRXs3SRJtAdp5VuwYTtwcp/s3Hxi6ZZPLZ+YRh6OqN5g3GaOBR4z2Ohv0ioB/5FLMICOt7VM/zroyXWIjWwpRPsRwjesba7nr9CqbQNDYt8ko4O9kR4w6y2JHbzLeOkohHc=,iv:+/B4m+c03e9iQMrijg7hJhDwQJZP55Bhnsr0n00Y2Cw=,tag:vXVZVbU+R1FpNVUSgnFA9A==,type:str]
+    lastmodified: "2024-09-09T14:48:25Z"
+    mac: ENC[AES256_GCM,data:CLfMsvRkE3jvbMyYMe/JggYPhW19P2ge/+uIrta1+sldlxhsoZorGeujAn/+E26awkH6aP4Z24Yt5kNk+dDXue29ciNUUtPedkkKdHeylL9YUFipVdCpJbhcn9oesAoHGQsq97YUM9tGmxuz0vVTCeL4II/5Y39RnVVkyJZITw8=,iv:88ivx+RlDsKF10nQmawd9jVWZY+lhUTZ/2lDsNlX7Xk=,tag:063QJbxG8XphyBXvGtU+Hg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.8.1
+    version: 3.9.0
