--- a/src/helm/widged/templates/backend_job_createsuperuser.yaml
+++ b/src/helm/widged/templates/backend_job_createsuperuser.yaml
@@ -1,5 +1,5 @@
-{{- $envVars := include "impress.common.env" (list . .Values.backend) -}}
-{{- $fullName := include "impress.backend.fullname" . -}}
+{{- $envVars := include "common.env" (list . .Values.backend) -}}
+{{- $fullName := include "backend.fullname" . -}}
 {{- $component := "backend" -}}
 apiVersion: batch/v1
 kind: Job
@@ -11,7 +11,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "impress.common.labels" (list . $component) | nindent 4 }}
+    {{- include "common.labels" (list . $component) | nindent 4 }}
 spec:
   template:
     metadata:
@@ -20,11 +20,11 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "impress.common.selectorLabels" (list . $component) | nindent 8 }}
+        {{- include "common.selectorLabels" (list . $component) | nindent 8 }}
     spec:
       {{- if $.Values.image.credentials }}
       imagePullSecrets:
-        - name: {{ include "impress.secret.dockerconfigjson.name" (dict "fullname" (include "impress.fullname" .) "imageCredentials" $.Values.image.credentials) }}
+        - name: {{ include "secret.dockerconfigjson.name" (dict "fullname" (include "fullname" .) "imageCredentials" $.Values.image.credentials) }}
       {{- end}}
       shareProcessNamespace: {{ .Values.backend.shareProcessNamespace }}
       containers:
@@ -87,7 +87,7 @@ spec:
         {{- range $index, $value := .Values.mountFiles }}
         - name: "files-{{ $index }}"
           configMap:
-            name: "{{ include "impress.fullname" $ }}-files-{{ $index }}"
+            name: "{{ include "fullname" $ }}-files-{{ $index }}"
         {{- end }}
         {{- range $name, $volume := .Values.backend.persistence }}
         - name: "{{ $name }}"
