--- a/src/helm/widged/templates/frontend_deployment.yaml
+++ b/src/helm/widged/templates/frontend_deployment.yaml
@@ -1,5 +1,5 @@
-{{- $envVars := include "impress.common.env" (list . .Values.frontend) -}}
-{{- $fullName := include "impress.frontend.fullname" . -}}
+{{- $envVars := include "common.env" (list . .Values.frontend) -}}
+{{- $fullName := include "frontend.fullname" . -}}
 {{- $component := "frontend" -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -7,12 +7,12 @@ metadata:
   name: {{ $fullName }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
-    {{- include "impress.common.labels" (list . $component) | nindent 4 }}
+    {{- include "common.labels" (list . $component) | nindent 4 }}
 spec:
   replicas: {{ .Values.frontend.replicas }}
   selector:
     matchLabels:
-      {{- include "impress.common.selectorLabels" (list . $component) | nindent 6 }}
+      {{- include "common.selectorLabels" (list . $component) | nindent 6 }}
   template:
     metadata:
       annotations:
@@ -20,11 +20,11 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "impress.common.selectorLabels" (list . $component) | nindent 8 }}
+        {{- include "common.selectorLabels" (list . $component) | nindent 8 }}
     spec:
       {{- if $.Values.image.credentials }}
       imagePullSecrets:
-        - name: {{ include "impress.secret.dockerconfigjson.name" (dict "fullname" (include "impress.fullname" .) "imageCredentials" $.Values.image.credentials) }}
+        - name: {{ include "secret.dockerconfigjson.name" (dict "fullname" (include "fullname" .) "imageCredentials" $.Values.image.credentials) }}
       {{- end}}
       shareProcessNamespace: {{ .Values.frontend.shareProcessNamespace }}
       containers:
@@ -56,15 +56,15 @@ spec:
               protocol: TCP
           {{- if .Values.frontend.probes.liveness }}
           livenessProbe:
-            {{- include "impress.probes.abstract" (merge .Values.frontend.probes.liveness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
+            {{- include "probes.abstract" (merge .Values.frontend.probes.liveness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
           {{- if .Values.frontend.probes.readiness }}
           readinessProbe:
-            {{- include "impress.probes.abstract" (merge .Values.frontend.probes.readiness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
+            {{- include "probes.abstract" (merge .Values.frontend.probes.readiness (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
           {{- if .Values.frontend.probes.startup }}
           startupProbe:
-            {{- include "impress.probes.abstract" (merge .Values.frontend.probes.startup (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
+            {{- include "probes.abstract" (merge .Values.frontend.probes.startup (dict "targetPort" .Values.frontend.service.targetPort )) | nindent 12 }}
           {{- end }}
           {{- with .Values.frontend.resources }}
           resources:
@@ -102,7 +102,7 @@ spec:
         {{- range $index, $value := .Values.mountFiles }}
         - name: "files-{{ $index }}"
           configMap:
-            name: "{{ include "impress.fullname" $ }}-files-{{ $index }}"
+            name: "{{ include "fullname" $ }}-files-{{ $index }}"
         {{- end }}
         {{- range $name, $volume := .Values.frontend.persistence }}
         - name: "{{ $name }}"
