--- a/src/frontend/packages/widged-sdk/package.json
+++ b/src/frontend/packages/widged-sdk/package.json
@@ -26,13 +26,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-modal": "3.16.1",
-    "styled-components": "6.1.12",
-    "vite-plugin-dts": "3.9.1",
-    "vite-tsconfig-paths": "4.3.2"
+    "styled-components": "6.1.12"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "7.15.0",
     "@typescript-eslint/parser": "7.15.0",
     "@vitejs/plugin-react-swc": "3.5.0",
@@ -40,6 +39,8 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
     "typescript": "5.4.5",
-    "vite": "5.3.4"
+    "vite": "5.3.4",
+    "vite-plugin-dts": "3.9.1",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
