--- a/src/frontend/packages/widged-sdk/tsconfig.json
+++ b/src/frontend/packages/widged-sdk/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
